# libandroid-support

./: .gitignore  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac
include/: langinfo.h  libintl.h  stdlib.h
include/machine/: limits.h
src/locale/: setlocale.c
src/musl-locale/: intl.c
