pkginclude_HEADERS = \
    include/ctype.h \
    include/cuchar \
    include/errno.h \
    include/iconv.h \
    include/inttypes.h \
    include/langinfo.h \
    include/locale.h \
    include/math.h \
    include/monetary.h \
    include/nl_types.h \
    include/stdint.h \
    include/stdio.h \
    include/stdlib.h \
    include/string.h \
    include/time.h \
    include/uchar.h \
    include/wchar.h \
    include/wctype.h \
    include/xlocale.h

lib_LTLIBRARIES=libandroid-support.la
libandroid_support_la_CFLAGS = -Os -ffunction-sections -fdata-sections
libandroid_support_la_CPPFLAGS = -I$(top_srcdir)/include -Drestrict=__restrict__
libandroid_support_la_LDFLAGS = -lm -Wl,--gc-sections -fno-asynchronous-unwind-tables -Wl,--strip-all -version-info 1:0:0
libandroid_support_la_SOURCES= \
    $(pkginclude_HEADERS) \
    src/locale/duplocale.c \
    src/locale/freelocale.c \
    src/locale/locale_impl.h \
    src/locale/localeconv.c \
    src/locale/newlocale.c \
    src/locale/setlocale.c \
    src/locale/uselocale.c \
    src/locale_support.c \
    src/musl-ctype/alpha.h \
    src/musl-ctype/iswalnum.c \
    src/musl-ctype/iswalpha.c \
    src/musl-ctype/iswblank.c \
    src/musl-ctype/iswcntrl.c \
    src/musl-ctype/iswctype.c \
    src/musl-ctype/iswdigit.c \
    src/musl-ctype/iswgraph.c \
    src/musl-ctype/iswlower.c \
    src/musl-ctype/iswprint.c \
    src/musl-ctype/iswpunct.c \
    src/musl-ctype/iswspace.c \
    src/musl-ctype/iswupper.c \
    src/musl-ctype/iswxdigit.c \
    src/musl-ctype/nonspacing.h \
    src/musl-ctype/punct.h \
    src/musl-ctype/towctrans.c \
    src/musl-ctype/wcswidth.c \
    src/musl-ctype/wctrans.c \
    src/musl-ctype/wcwidth.c \
    src/musl-ctype/wide.h \
    src/musl-locale/catclose.c \
    src/musl-locale/catgets.c \
    src/musl-locale/catopen.c \
    src/musl-locale/codepages.h \
    src/musl-locale/gb18030.h \
    src/musl-locale/iconv.c \
    src/musl-locale/intl.c \
    src/musl-locale/isalnum_l.c \
    src/musl-locale/isalpha_l.c \
    src/musl-locale/isblank_l.c \
    src/musl-locale/iscntrl_l.c \
    src/musl-locale/isdigit_l.c \
    src/musl-locale/isgraph_l.c \
    src/musl-locale/islower_l.c \
    src/musl-locale/isprint_l.c \
    src/musl-locale/ispunct_l.c \
    src/musl-locale/isspace_l.c \
    src/musl-locale/isupper_l.c \
    src/musl-locale/iswalnum_l.c \
    src/musl-locale/iswalpha_l.c \
    src/musl-locale/iswblank_l.c \
    src/musl-locale/iswcntrl_l.c \
    src/musl-locale/iswctype_l.c \
    src/musl-locale/iswdigit_l.c \
    src/musl-locale/iswgraph_l.c \
    src/musl-locale/iswlower_l.c \
    src/musl-locale/iswprint_l.c \
    src/musl-locale/iswpunct_l.c \
    src/musl-locale/iswspace_l.c \
    src/musl-locale/iswupper_l.c \
    src/musl-locale/iswxdigit_l.c \
    src/musl-locale/isxdigit_l.c \
    src/musl-locale/jis0208.h \
    src/musl-locale/langinfo.c \
    src/musl-locale/legacychars.h \
    src/musl-locale/libc.h \
    src/musl-locale/nl_langinfo_l.c \
    src/musl-locale/strcasecmp_l.c \
    src/musl-locale/strcoll.c \
    src/musl-locale/strcoll_l.c \
    src/musl-locale/strerror_l.c \
    src/musl-locale/strfmon.c \
    src/musl-locale/strftime_l.c \
    src/musl-locale/strncasecmp_l.c \
    src/musl-locale/strxfrm.c \
    src/musl-locale/strxfrm_l.c \
    src/musl-locale/tolower_l.c \
    src/musl-locale/toupper_l.c \
    src/musl-locale/towctrans_l.c \
    src/musl-locale/towlower_l.c \
    src/musl-locale/towupper_l.c \
    src/musl-locale/wcscoll.c \
    src/musl-locale/wcscoll_l.c \
    src/musl-locale/wcsxfrm.c \
    src/musl-locale/wcsxfrm_l.c \
    src/musl-locale/wctrans_l.c \
    src/musl-locale/wctype_l.c \
    src/musl-math/frexp.c \
    src/musl-math/frexpf.c \
    src/musl-math/frexpl.c \
    src/musl-multibyte/btowc.c \
    src/musl-multibyte/internal.c \
    src/musl-multibyte/internal.h \
    src/musl-multibyte/libc.h \
    src/musl-multibyte/mblen.c \
    src/musl-multibyte/mbrlen.c \
    src/musl-multibyte/mbrtowc.c \
    src/musl-multibyte/mbsinit.c \
    src/musl-multibyte/mbsnrtowcs.c \
    src/musl-multibyte/mbsrtowcs.c \
    src/musl-multibyte/mbstowcs.c \
    src/musl-multibyte/mbtowc.c \
    src/musl-multibyte/wcrtomb.c \
    src/musl-multibyte/wcsnrtombs.c \
    src/musl-multibyte/wcsrtombs.c \
    src/musl-multibyte/wcstombs.c \
    src/musl-multibyte/wctob.c \
    src/musl-multibyte/wctomb.c \
    src/musl-stdio/printf.c \
    src/musl-stdio/snprintf.c \
    src/musl-stdio/sprintf.c \
    src/musl-stdio/swprintf.c \
    src/musl-stdio/vprintf.c \
    src/musl-stdio/vsprintf.c \
    src/musl-stdio/vwprintf.c \
    src/musl-stdio/wprintf.c \
    src/stdio/vfprintf.c \
    src/stdio/vfwprintf.c \
    src/stdlib_support.c \
    src/wchar_support.c
